feat: add new environment variables and update healthchecks

--- a/docker-compose/syntho-ui/example.env
+++ b/docker-compose/syntho-ui/example.env
@@ -18,6 +18,8 @@ CORE_BROKER_URL=redis://redis:6379/0
 CORE_RESULT_BACKEND=redis://redis:6379/0
 CORE_RAY_ADDRESS=
 CORE_PORT=8080
+CORE_REDIS_HOST=redis
+CORE_REDIS_PORT=6379
 
 BACKEND_PORT=8000
 BACKEND_SECRET_KEY="66n6ldql(b2g0jmop(gr)"
@@ -30,6 +32,7 @@ BACKEND_DB_NAME=syntho-backend
 BACKEND_DB_USER=syntho
 BACKEND_DB_PASSWORD=!2ImY6&A!*i3
 BACKEND_DB_PORT=5432
+BACKEND_DATA_ACCESS=True
 
 ADMIN_USERNAME=
 ADMIN_PASSWORD=
