--- a/docker-compose/syntho-ui/docker-compose.yaml
+++ b/docker-compose/syntho-ui/docker-compose.yaml
@@ -15,23 +15,25 @@ services:
       PORT: ${CORE_PORT}
       LICENSE_KEY_SIGNED: ${LICENSE_KEY}
       MAX_WORKERS: "${CORE_WORKERS:-4}"
+      REDIS_HOST: ${CORE_REDIS_HOST}
+      REDIS_PORT: ${CORE_REDIS_PORT}
     # volumes:
     # Additional volumes for Kerberos as an example
     # Uncomment if volumes are required
     #  - /krb/krb5.conf:/etc/krb5.conf
-    depends_on:
-      - redis
-      - postgres
     healthcheck:
-      test: wget --no-verbose --tries=1 -O /dev/null http://localhost:${CORE_PORT}/api/v1/status || exit 1
+      test: wget --no-verbose --tries=1 -O /dev/null http://localhost:8080/api/v1/status || exit 1
       interval: 5s
       timeout: 1s
       retries: 30
+    depends_on:
+      - redis
+      - postgres
 
   core_worker:
     image: ${CORE_IMAGE}
     restart: on-failure
-    command: celery -A app.celery.celery_tasks worker --loglevel=info
+    command: celery -A app.celery worker -P threads --loglevel=info
     environment:
       DATABASE_URL: "postgresql+asyncpg://${CORE_DATABASE_USER}:${CORE_DATABASE_PASSWORD}@${CORE_DATABASE_HOST}/${CORE_DATABASE_NAME}"
       APP_ENV: ${CORE_APP_ENV}
@@ -41,6 +43,8 @@ services:
       CELERY_RESULT_BACKEND: ${CORE_RESULT_BACKEND}
       RAY_ADDRESS: ${CORE_RAY_ADDRESS}
       LICENSE_KEY_SIGNED: ${LICENSE_KEY}
+      REDIS_HOST: ${CORE_REDIS_HOST}
+      REDIS_PORT: ${CORE_REDIS_PORT}
     # volumes:
     # Additional volumes for Kerberos as an example
     # Uncomment if volumes are required
@@ -70,17 +74,19 @@ services:
       USER_NAME: ${ADMIN_USERNAME}
       USER_PASSWORD: ${ADMIN_PASSWORD}
       USER_EMAIL: ${ADMIN_EMAIL}
+      DATA_ACCESS: ${BACKEND_DATA_ACCESS}
+      RAY_URL: http://${CORE_RAY_ADDRESS}:8265
     ports:
-      - "${BACKEND_PORT}:${BACKEND_PORT}"
+      - "${BACKEND_PORT}:8000"
     depends_on:
       postgres:
         condition: service_healthy
     healthcheck:
-      test: wget --no-verbose --tries=1 -O /dev/null http://localhost:${BACKEND_PORT}/docs/ || exit 1
+      test: wget --no-verbose --tries=1 -O /dev/null http://localhost:8000/docs/ || exit 1
       interval: 5s
       timeout: 1s
       retries: 30
-  
+
   worker:
     image: ${BACKEND_IMAGE}
     entrypoint: [celery, -A, SynthoBackend, worker]
@@ -117,7 +123,7 @@ services:
     depends_on:
       - backend
     healthcheck:
-      test: wget --no-verbose --tries=1 -O /dev/null http://localhost:${FRONTEND_PORT}/login || exit 1
+      test: ["CMD", "curl", "-f", "http://localhost:${FRONTEND_PORT}"]
       interval: 5s
       timeout: 1s
       retries: 30
