feat: add new environment variables for Helm chart syntho-ui

--- a/helm/syntho-ui/templates/core/core-deployment.yaml
+++ b/helm/syntho-ui/templates/core/core-deployment.yaml
@@ -35,13 +35,19 @@ spec:
             - name: SECRET_KEY_2
               value: {{quote .Values.core.secret_key }}
             - name: CELERY_BROKER_URL
-              value: {{quote .Values.core.redis_host }}
+              value:  "redis://{{ .Values.core.redis.host}}:{{ .Values.core.redis.port }}/{{ .Values.core.redis.db }}"
             - name: CELERY_RESULT_BACKEND
-              value: {{quote .Values.core.redis_host }}
+              value:  "redis://{{ .Values.core.redis.host}}:{{ .Values.core.redis.port }}/{{ .Values.core.redis.db }}"
             - name: RAY_ADDRESS
               value: {{quote .Values.core.ray_address }}
             - name: LICENSE_KEY_SIGNED
               value: {{ .Values.SynthoLicense }}
+            - name: MAX_WORKERS
+              value: {{ quote .Values.core.workers }}
+            - name: REDIS_HOST
+              value: {{ quote .Values.core.redis.host}}
+            - name: REDIS_PORT
+              value: {{ quote .Values.core.redis.port }}
           {{- if or $.Values.core.env $.Values.core.envSecrets }}
             {{- range $key, $value := $.Values.core.env }}
             - name: {{ $key }}
@@ -70,16 +76,16 @@ spec:
             httpGet:
               path: /api/v1/status
               port: {{ .Values.core.port }}
-            initialDelaySeconds: 10
-            periodSeconds: 60
+            initialDelaySeconds: 20
+            periodSeconds: 10
             successThreshold: 1
           livenessProbe:
             httpGet:
               path: /api/v1/status
               port: {{ .Values.core.port }}
-            initialDelaySeconds: 60
-            timeoutSeconds: 10
-            periodSeconds: 10
+            initialDelaySeconds: 30
+            timeoutSeconds: 2
+            periodSeconds: 2
             failureThreshold: 2
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
