--- a/helm/syntho-ui/values.yaml
+++ b/helm/syntho-ui/values.yaml
@@ -24,7 +24,7 @@ core:
   volumes: []
   volumeMounts: []
   database_enabled: true
-  celery_args: ['-A', 'app.celery.celery_tasks', 'worker', '--loglevel=info', '-P', 'threads']
+  celery_args: ['-A', 'app.celery', 'worker', '--loglevel=info', '-P', 'threads']
   db:
     username: postgres
     password: postgres
@@ -33,7 +33,10 @@ core:
     port: 5432
   port: 8080
   secret_key: abcd12412
-  redis_host: redis://redis-svc:6379/1
+  redis:
+    host: redis-svc
+    port: 6379
+    db: 1
   ray_address: ray-cluster-head-svc
 
 backend:
