--- a/helm/syntho-ui/values.yaml
+++ b/helm/syntho-ui/values.yaml
@@ -68,7 +68,7 @@ backend:
   volumes: []
   volumeMounts: []
   ingress:
-    enabled: false
+    enabled: true
     name: backend-ingress
     className: nginx
     annotations: {
