--- a/helm/syntho-ui/templates/core/core-worker-pod.yaml
+++ b/helm/syntho-ui/templates/core/core-worker-pod.yaml
@@ -79,7 +79,7 @@ spec:
               command:
               - "/bin/bash"
               - "-c"
-              - "celery -A app.celery inspect ping | grep -q OK"
+              - "celery -b redis://{{ .Values.core.redis.host}}:{{ .Values.core.redis.port }}/{{ .Values.core.redis.db }} inspect ping -d celery@$HOSTNAME"
           livenessProbe:
             initialDelaySeconds: 30
             periodSeconds: 10
@@ -88,7 +88,7 @@ spec:
               command:
               - "/bin/bash"
               - "-c"
-              - "celery -A app.celery inspect ping | grep -q OK"
+              - "celery -b redis://{{ .Values.core.redis.host}}:{{ .Values.core.redis.port }}/{{ .Values.core.redis.db }} inspect ping -d celery@$HOSTNAME"
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
