--- a/helm/syntho-ui/values.yaml
+++ b/helm/syntho-ui/values.yaml
@@ -108,7 +108,8 @@ db:
 redis:
   image:
     repository: redis
-    tag: 7.0-rc1-alpine3.15
+    tag: 7.2-rc2
+  storageClassName: default
 
 imagePullSecrets: 
   - name: <synthoImageSecret>
