--- a/helm/syntho-ui/templates/redis/redis-statefulset.yaml
+++ b/helm/syntho-ui/templates/redis/redis-statefulset.yaml
@@ -3,10 +3,11 @@ kind: StatefulSet
 metadata:
   name: redis
   labels:
+    {{- include "syntho-core.labels" . | nindent 4 }}
     app: redis
 spec:
   serviceName: "redis-svc"
-  replicas: 1
+  replicas: {{ .Values.redis.replicaCount }}
   selector:
     matchLabels:
       app: redis
