chore: add additional env variables for docker-compose setup

--- a/docker-compose/syntho-ui/docker-compose.yaml
+++ b/docker-compose/syntho-ui/docker-compose.yaml
@@ -62,6 +62,7 @@ services:
       SYNTHO_ENGINE_URL: http://core:${CORE_PORT}/api
       SYNTHO_WEBSOCKET_URL: ws://core:${CORE_PORT}/websocket/
       SECRET_KEY: $${BACKEND_SECRET_KEY}
+      SECURE_COOKIES: ${SECURED_COOKIES}
       DJANGO_PRODUCTION: "True"
       REDIS_HOST: ${BACKEND_REDIS_HOST}
       REDIS_PORT: ${BACKEND_REDIS_PORT}
@@ -76,6 +77,7 @@ services:
       USER_EMAIL: ${ADMIN_EMAIL}
       DATA_ACCESS: ${BACKEND_DATA_ACCESS}
       RAY_URL: http://${CORE_RAY_ADDRESS}:8265
+      EXTRA_ALLOWED_HOSTS: "backend ${FRONTEND_DOMAIN}"
     ports:
       - "${BACKEND_PORT}:8000"
     depends_on:
@@ -112,12 +114,8 @@ services:
     environment:
         NODE_ENV: development
         PORT: ${FRONTEND_PORT}
-        OPEN_API_URL: ${BACKEND_PROTOCOL}://${BACKEND_HOST}/playground/?format=openapi
-        NEXT_PUBLIC_BACKEND_HOST: ${BACKEND_HOST}
-        NEXT_PUBLIC_BACKEND_PROTOCOL: ${BACKEND_PROTOCOL}
-        NEXT_PUBLIC_BACKEND_WS_PROTOCOL: ws
-        NEXT_PUBLIC_FRONTEND_HOST: ${FRONTEND_HOST}
-        NEXT_PUBLIC_FRONTEND_PROTOCOL: ${FRONTEND_PROTOCOL}
+        OPEN_API_URL: http://backend:8000/api/playground/?format=openapi
+        BACKEND_HOST: backend:8000
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT}"
     depends_on:
