--- a/docker-compose/syntho-ui/example.env
+++ b/docker-compose/syntho-ui/example.env
@@ -1,13 +1,14 @@
-BACKEND_HOST=localhost:8000
 FRONTEND_HOST=localhost:3000
-BACKEND_PROTOCOL=http
+FRONTEND_DOMAIN=localhost
+# If TLS is used, set protocol to https and secured_cookes to True
 FRONTEND_PROTOCOL=http
+SECURED_COOKIES="False"
 
 LICENSE_KEY=
 
-CORE_IMAGE=syntho.azurecr.io/syntho-core-api:0.4.64
-BACKEND_IMAGE=syntho.azurecr.io/syntho-core-backend:0.78.1
-FRONTEND_IMAGE=syntho.azurecr.io/syntho-core-frontend:0.130.0
+CORE_IMAGE=syntho.azurecr.io/syntho-core-api:latest
+BACKEND_IMAGE=syntho.azurecr.io/syntho-core-backend:latest
+FRONTEND_IMAGE=syntho.azurecr.io/syntho-core-frontend:latest
 
 CORE_DATABASE_HOST=postgres
 CORE_DATABASE_USER=syntho
