--- a/docker-compose/syntho-ui/docker-compose.yaml
+++ b/docker-compose/syntho-ui/docker-compose.yaml
@@ -83,7 +83,7 @@ services:
       postgres:
         condition: service_healthy
     healthcheck:
-      test: wget --no-verbose --tries=1 -O /dev/null http://localhost:8000/docs/ || exit 1
+      test: wget --no-verbose --tries=1 -O /dev/null http://backend:8000/docs/ || exit 1
       interval: 5s
       timeout: 1s
       retries: 30
