chore: add storage for ray

--- a/docker-compose/ray/option-2/docker-compose-head.yaml
+++ b/docker-compose/ray/option-2/docker-compose-head.yaml
@@ -23,4 +23,5 @@ services:
         soft: 65536
         hard: 65536
     command: >
-      ray start --head --port=6379 --no-monitor --dashboard-host 0.0.0.0 --block --disable-usage-stats
+      ray start --head --port=6379 --no-monitor --dashboard-host 0.0.0.0 --block --disable-usage-stats --storage=/tmp
+  
