--- a/docker-compose/ray/option-2/example.env
+++ b/docker-compose/ray/option-2/example.env
@@ -1,3 +1,5 @@
 RAY_HEAD_IP=<ip-or-hostname>
 SYNTHO_RAY_IMAGE=<syntho-ray-image>
 LICENSE_KEY=
+# If syntho-ui containers will be running on the same machine as the Ray head container, set SAME_NETWORK to true
+SAME_NETWORK=false
