--- a/docker-compose/syntho-ui/example.env
+++ b/docker-compose/syntho-ui/example.env
@@ -19,7 +19,7 @@ CORE_BROKER_URL=redis://redis:6379/0
 CORE_RESULT_BACKEND=redis://redis:6379/0
 CORE_RAY_ADDRESS=
 CORE_PORT=8080
-# If ray cluster is running on different VM, open port 6379 on the current machine and add IP address of the machine in CORE_REDIS_HOST
+# If ray cluster is running on a different VM, open port 6379 on the current machine and add IP address of the machine in CORE_REDIS_HOST
 CORE_REDIS_HOST=redis
 CORE_REDIS_PORT=6379
 
