feat: Update the backend worker entrypoint and command to start the subscriber instead of celery worker

--- a/docker-compose/syntho-ui/docker-compose.yaml
+++ b/docker-compose/syntho-ui/docker-compose.yaml
@@ -90,7 +90,7 @@ services:
 
   worker:
     image: ${BACKEND_IMAGE}
-    entrypoint: [celery, -A, SynthoBackend, worker]
+    entrypoint: [python, manage.py, subscriber]
     environment:
       FRONTEND_URL: ${FRONTEND_PROTOCOL}://${FRONTEND_HOST}
       SYNTHO_ENGINE_URL: http://core:${CORE_PORT}/api
