--- a/helm/syntho-ui/templates/backend/backend-deployment.yaml
+++ b/helm/syntho-ui/templates/backend/backend-deployment.yaml
@@ -76,7 +76,7 @@ spec:
             {{- end }}
           {{- end }}
           volumeMounts:
-            {{- toYaml .Values.backend.volumeMounts | default "" | nindent 12 }} 
+            {{- toYaml .Values.backend.volumeMounts | default "" | nindent 12 }}
           name: {{ .Values.backend.name }}
           ports:
             - containerPort: {{ .Values.backend.port }}
@@ -112,7 +112,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
-        {{- toYaml .Values.backend.volumes | default "" | nindent 8 }}    
+        {{- toYaml .Values.backend.volumes | default "" | nindent 8 }}
       restartPolicy: Always
       {{- if .Values.nodeSelector }}
       nodeSelector: {{- .Values.nodeSelector | toYaml | nindent 8 }}
@@ -194,10 +194,10 @@ spec:
           {{- end }}
         {{- end }}
         volumeMounts:
-          {{- toYaml .Values.backend.volumeMounts | default "" | nindent 12 }} 
+          {{- toYaml .Values.backend.volumeMounts | default "" | nindent 12 }}
         image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
-        command: ["celery"]
-        args: ["-A", "SynthoBackend", "worker"]
+        command: ["python"]
+        args: ["manage.py", "subscriber"]
         imagePullPolicy: Always
         resources:
             limits:
@@ -227,7 +227,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
-        {{- toYaml .Values.backend.volumes | default "" | nindent 8 }}    
+        {{- toYaml .Values.backend.volumes | default "" | nindent 8 }}
       restartPolicy: Always
       {{- if .Values.nodeSelector }}
       nodeSelector: {{- .Values.nodeSelector | toYaml | nindent 8 }}
@@ -239,4 +239,3 @@ spec:
       affinity: {{- .Values.affinity | toYaml | nindent 8 }}
       {{- end }}
 status: {}
-
