adjusted backend chart to new setup without Celery worker entrypoint

--- a/helm/syntho-ui/templates/backend/backend-deployment.yaml
+++ b/helm/syntho-ui/templates/backend/backend-deployment.yaml
@@ -196,8 +196,8 @@ spec:
         volumeMounts:
           {{- toYaml .Values.backend.volumeMounts | default "" | nindent 12 }} 
         image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
-        command: ["celery"]
-        args: ["-A", "SynthoBackend", "worker"]
+        command: ["python"]
+        args: ["manage.py", "subscriber"]
         imagePullPolicy: Always
         resources:
             limits:
