fix: adjust path based routing for backend to use wildcard instead of regex

--- a/helm/syntho-ui/templates/frontend/frontend-ingress.yaml
+++ b/helm/syntho-ui/templates/frontend/frontend-ingress.yaml
@@ -59,7 +59,7 @@ spec:
               servicePort: {{ $svcPort }}
               {{- end }}
           {{- end }}
-          - path: /api/.*
+          - path: /api/*
             pathType: Prefix
             backend:
               service:
