--- a/helm/syntho-ui/values.yaml
+++ b/helm/syntho-ui/values.yaml
@@ -80,6 +80,7 @@ frontend:
     name: frontend-ingress
     className: nginx
     annotations: {
+      nginx.ingress.kubernetes.io/use-regex: "true",
       nginx.ingress.kubernetes.io/proxy-buffer-size: "32k",
       nginx.ingress.kubernetes.io/affinity: "cookie",
       nginx.ingress.kubernetes.io/proxy-connect-timeout: "600",
