--- a/helm/syntho-ui/values.yaml
+++ b/helm/syntho-ui/values.yaml
@@ -20,7 +20,7 @@ core:
   volumes: []
   volumeMounts: []
   database_enabled: true
-  celery_args: ['-A', 'app.celery', 'worker', '--loglevel=info']
+  celery_args: ['-A', 'app.celery', 'worker', '--loglevel=info', '--concurrency=4', '--max-memory-per-child=50000']
   db:
     username: postgres
     password: postgres
@@ -34,7 +34,7 @@ core:
     port: 6379
     db: 1
   ray_address: ray-cluster-head-svc
-  workers: 4
+  workers: 2
 
 backend:
   replicaCount: 1
@@ -81,6 +81,7 @@ frontend:
     className: nginx
     annotations: {
       cert-manager.io/cluster-issuer: "letsencrypt-production",
+      nginx.ingress.kubernetes.io/session-cookie-path: "/",
       nginx.ingress.kubernetes.io/proxy-buffer-size: "32k",
       nginx.ingress.kubernetes.io/affinity: "cookie",
       nginx.ingress.kubernetes.io/use-regex: "true",
