chore: update frontend ingress with correct pathType

--- a/helm/syntho-ui/templates/frontend/frontend-ingress.yaml
+++ b/helm/syntho-ui/templates/frontend/frontend-ingress.yaml
@@ -60,7 +60,7 @@ spec:
               {{- end }}
           {{- end }}
           - path: /api/*
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: {{ $fullNameBackend }}
