chore: update example.env for 1 node setup

--- a/docker-compose/one-node-ray-syntho-ui/example.env
+++ b/docker-compose/one-node-ray-syntho-ui/example.env
@@ -1,16 +1,23 @@
-FRONTEND_HOST=localhost:3000
-FRONTEND_DOMAIN=localhost
-# If TLS is used, set protocol to https and secured_cookies to True
-FRONTEND_PROTOCOL=http
-SECURED_COOKIES="False"
-
-SYNTHO_RAY_IMAGE=syntho.azurecr.io/syntho-ray:latest
-
 LICENSE_KEY=
 
+ADMIN_USERNAME=
+ADMIN_PASSWORD=
+ADMIN_EMAIL=
+
+SYNTHO_RAY_IMAGE=syntho.azurecr.io/syntho-ray:latest
 CORE_IMAGE=syntho.azurecr.io/syntho-core-api:latest
 BACKEND_IMAGE=syntho.azurecr.io/syntho-core-backend:latest
 FRONTEND_IMAGE=syntho.azurecr.io/syntho-core-frontend:latest
+
+FRONTEND_HOST=localhost:3000
+FRONTEND_DOMAIN=localhost
+
+# If another port needs to be exposed for the backend API, change that here
+BACKEND_PORT=8000
+
+# If TLS is used, set protocol to https and secured_cookies to True
+FRONTEND_PROTOCOL=http
+SECURED_COOKIES="False"
 
 CORE_DATABASE_HOST=postgres
 CORE_DATABASE_USER=syntho
@@ -19,15 +26,12 @@ CORE_DATABASE_NAME=syntho-core
 CORE_SECRET_KEY=Myyxngwf-NL04CgyD6WvcyMD09rMkN_fk3q0Bga54ME=
 CORE_BROKER_URL=redis://redis:6379/0
 CORE_RESULT_BACKEND=redis://redis:6379/0
-CORE_RAY_ADDRESS=
+CORE_RAY_ADDRESS=ray-head
 CORE_PORT=8080
-# If ray cluster is running on a different VM, open port 6379 on the current machine and add IP address of the machine in CORE_REDIS_HOST
 CORE_REDIS_HOST=redis
 CORE_REDIS_PORT=6379
 
-BACKEND_PORT=8000
 BACKEND_SECRET_KEY="66n6ldql(b2g0jmop(gr)"
-BACKEND_ROOT_PASSWORD=
 BACKEND_REDIS_HOST=redis
 BACKEND_REDIS_PORT=6379
 BACKEND_REDIS_DB_INDEX=1
@@ -37,10 +41,6 @@ BACKEND_DB_USER=syntho
 BACKEND_DB_PASSWORD=!2ImY6&A!*i3
 BACKEND_DB_PORT=5432
 BACKEND_DATA_ACCESS=True
-
-ADMIN_USERNAME=
-ADMIN_PASSWORD=
-ADMIN_EMAIL=
 
 FRONTEND_PORT=3000
 
