chore: update default ray image tag to lastest-cpu

--- a/docker-compose/one-node-ray-syntho-ui/example.env
+++ b/docker-compose/one-node-ray-syntho-ui/example.env
@@ -4,7 +4,7 @@ ADMIN_USERNAME=
 ADMIN_PASSWORD=
 ADMIN_EMAIL=
 
-SYNTHO_RAY_IMAGE=syntho.azurecr.io/syntho-ray:latest
+SYNTHO_RAY_IMAGE=syntho.azurecr.io/syntho-ray:latest-cpu
 CORE_IMAGE=syntho.azurecr.io/syntho-core-api:latest
 BACKEND_IMAGE=syntho.azurecr.io/syntho-core-backend:latest
 FRONTEND_IMAGE=syntho.azurecr.io/syntho-core-frontend:latest
