--- a/docker-compose/one-node-ray-syntho-ui/example.env
+++ b/docker-compose/one-node-ray-syntho-ui/example.env
@@ -4,7 +4,7 @@ ADMIN_USERNAME=
 ADMIN_PASSWORD=
 ADMIN_EMAIL=
 
-SYNTHO_RAY_IMAGE=syntho.azurecr.io/syntho-ray:latest-cpu
+RAY_IMAGE=syntho.azurecr.io/syntho-ray:latest-cpu
 CORE_IMAGE=syntho.azurecr.io/syntho-core-api:latest
 BACKEND_IMAGE=syntho.azurecr.io/syntho-core-backend:latest
 FRONTEND_IMAGE=syntho.azurecr.io/syntho-core-frontend:latest
@@ -12,8 +12,13 @@ FRONTEND_IMAGE=syntho.azurecr.io/syntho-core-frontend:latest
 FRONTEND_HOST=localhost:3000
 FRONTEND_DOMAIN=localhost
 
-# If another port needs to be exposed for the backend API, change that here
+# If another port needs to be exposed for the backend API and Frontend, change that here
 BACKEND_PORT=8000
+FRONTEND_PORT=3000
+
+# AI Cluster machine limits (Ray)
+RAY_CPUS=12
+RAY_MEMORY=100G
 
 # If TLS is used, set protocol to https and secured_cookies to True
 FRONTEND_PROTOCOL=http
@@ -41,8 +46,6 @@ BACKEND_DB_USER=syntho
 BACKEND_DB_PASSWORD=!2ImY6&A!*i3
 BACKEND_DB_PORT=5432
 BACKEND_DATA_ACCESS=True
-
-FRONTEND_PORT=3000
 
 # Debug variables, only change if you know what you're doing
 # If CORE_APP_ENV is set to prod, CORE_RAY_ADDRESS cannot be empty
