chore: remove network_mode host for ray container and set ray address correctly

--- a/docker-compose/one-node-ray-syntho-ui/example.env
+++ b/docker-compose/one-node-ray-syntho-ui/example.env
@@ -31,7 +31,7 @@ CORE_DATABASE_NAME=syntho-core
 CORE_SECRET_KEY=Myyxngwf-NL04CgyD6WvcyMD09rMkN_fk3q0Bga54ME=
 CORE_BROKER_URL=redis://redis:6379/0
 CORE_RESULT_BACKEND=redis://redis:6379/0
-CORE_RAY_ADDRESS=ray-head
+CORE_RAY_ADDRESS=head
 CORE_PORT=8080
 CORE_REDIS_HOST=redis
 CORE_REDIS_PORT=6379
