resources adjustments, some url changes, probe fine-tuning, initContainers etc

--- a/helm/ray/templates/raycluster-storage.yaml
+++ b/helm/ray/templates/raycluster-storage.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
 spec:
   accessModes:
-  - ReadWriteMany
+  - {{ .Values.storage.accessMode | default "ReadWriteMany" }}
   resources:
     requests:
       storage: 20Gi
