--- a/helm/syntho-ui/templates/dbs/database-data-2-persistentvolumeclaim.yaml
+++ b/helm/syntho-ui/templates/dbs/database-data-2-persistentvolumeclaim.yaml
@@ -12,5 +12,6 @@ spec:
   resources:
     requests:
       storage: 100Mi
+  storageClassName: {{ .Values.db.storageClassName | default "default" }}
 status: {}
 {{- end }}
