--- a/helm/ray/values.yaml
+++ b/helm/ray/values.yaml
@@ -1,7 +1,7 @@
 # Default values for kuberay-operator.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-SynthoLicense: key
+SynthoLicense: "<put-your-own-license>"
 
 clustername: ray-cluster
 
@@ -14,8 +14,8 @@ operatorImage:
   pullPolicy: IfNotPresent
 
 image:
-  repository: syntho.azurecr.io/syntho-ray
-  tag: 0.31.2-cpu
+  repository: rayproject/ray
+  tag: latest-py310-cpu-aarch64
   pullPolicy: IfNotPresent
 
 head:
@@ -69,12 +69,12 @@ head:
   # for further guidance.
   resources:
     limits:
-      cpu: "6"
+      cpu: "1000m"
       # To avoid out-of-memory issues, never allocate less than 2G memory for the Ray head.
-      memory: "32G"
+      memory: "4G"
     requests:
-      cpu: "6"
-      memory: "32G"
+      cpu: "500m"
+      memory: "2G"
   annotations: {}
   nodeSelector: {}
   tolerations: []
@@ -133,11 +133,11 @@ worker:
   # for further guidance.
   resources:
     limits:
-      cpu: "1"
-      memory: "1G"
+      cpu: "1000m"
+      memory: "4G"
     requests:
-      cpu: "1"
-      memory: "1G"
+      cpu: "500m"
+      memory: "2G"
   annotations: {}
   nodeSelector: {}
   tolerations: []
@@ -222,7 +222,8 @@ nameOverride: "kuberay"
 fullnameOverride: "kuberay-operator"
 
 storage:
-  storageClassName: default
+  storageClassName: standard
+  accessMode: ReadWriteOnce
 
 serviceAccount:
   # Specifies whether a service account should be created
