--- a/helm/syntho-ui/templates/backend/backend-deployment.yaml
+++ b/helm/syntho-ui/templates/backend/backend-deployment.yaml
@@ -61,7 +61,7 @@ spec:
             - name: WORKERS
               value: {{quote .Values.backend.workers }}
             - name: EXTRA_ALLOWED_HOSTS
-              value: {{quote .Values.frontend_url }}
+              value: "{{ .Values.frontend_url }} {{ .Values.backend.name }}.syntho.svc.cluster.local"
           {{- if or $.Values.backend.env $.Values.backend.envSecrets }}
             {{- range $key, $value := $.Values.backend.env }}
             - name: {{ $key }}
@@ -83,11 +83,11 @@ spec:
           imagePullPolicy: Always
           resources:
             limits:
-              cpu: "2000m"
+              cpu: "1000m"
               ephemeral-storage: "2Gi"
               memory: "4Gi"
             requests:
-              cpu: "2000m"
+              cpu: "500m"
               ephemeral-storage: "2Gi"
               memory: "2Gi"
           readinessProbe:
@@ -97,8 +97,10 @@ spec:
               httpHeaders:
               - name: Host
                 value: {{ .Values.frontend_url }}
-            initialDelaySeconds: 10
-            periodSeconds: 60
+            initialDelaySeconds: 120
+            timeoutSeconds: 30
+            periodSeconds: 30
+            failureThreshold: 3
             successThreshold: 1
           livenessProbe:
             httpGet:
@@ -107,10 +109,11 @@ spec:
               httpHeaders:
               - name: Host
                 value: {{ .Values.frontend_url }}
-            initialDelaySeconds: 60
-            timeoutSeconds: 10
-            periodSeconds: 10
-            failureThreshold: 2
+            initialDelaySeconds: 240
+            timeoutSeconds: 30
+            periodSeconds: 30
+            failureThreshold: 3
+            successThreshold: 1
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
