--- a/helm/syntho-ui/templates/backend/backend-service.yaml
+++ b/helm/syntho-ui/templates/backend/backend-service.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   ports:
     - name: backend-port
-      port: {{ .Values.backend.service.port }}
+      port: 80
       targetPort: {{ .Values.backend.service.port }}
   selector:
     app: {{ .Values.backend.name }}
