--- a/helm/syntho-ui/templates/dbs/database-data-1-persistentvolumeclaim.yaml
+++ b/helm/syntho-ui/templates/dbs/database-data-1-persistentvolumeclaim.yaml
@@ -11,5 +11,6 @@ spec:
   resources:
     requests:
       storage: 100Mi
+  storageClassName: {{ .Values.db.storageClassName | default "default" }}
 status: {}
 {{- end }}
