--- a/helm/syntho-ui/templates/frontend/frontend-ingress.yaml
+++ b/helm/syntho-ui/templates/frontend/frontend-ingress.yaml
@@ -28,9 +28,9 @@ spec:
   {{- if and .Values.frontend.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
   ingressClassName: {{ .Values.frontend.ingress.className }}
   {{- end }}
-  {{- if .Values.frontend.ingress.tls }}
+  {{- if .Values.frontend.ingress.tls.enabled }}
   tls:
-    {{- range .Values.frontend.ingress.tls }}
+    {{- range .Values.frontend.ingress.conf.tls }}
     - hosts:
         {{- range .hosts }}
         - {{ . | quote }}
