--- a/helm/syntho-ui/values.yaml
+++ b/helm/syntho-ui/values.yaml
@@ -2,17 +2,17 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-frontend_path: 
+frontend_path:
 frontend_url: syntho.company.com
-frontend_protocol: https
+frontend_protocol: http
 
-SynthoLicense: 
+SynthoLicense: "<put-your-own-license>"
 
 core:
   replicaCount: 1
   image:
     repository: syntho.azurecr.io/syntho-core-api
-    tag: latest
+    tag: 0.45.1
   name: core
   service:
     port: 8080
@@ -20,7 +20,7 @@ core:
   volumes: []
   volumeMounts: []
   database_enabled: true
-  celery_args: ['-A', 'app.celery', 'worker', '--loglevel=info', '--concurrency=4', '--max-memory-per-child=50000']
+  celery_args: ['-A', 'app.celery', 'worker', '--loglevel=info', '--concurrency=1', '--max-memory-per-child=50000']
   db:
     username: postgres
     password: postgres
@@ -28,23 +28,23 @@ core:
     host: postgres
     port: 5432
   port: 8080
-  secret_key: abcd12412
+  secret_key: ZzXj2az_fnnM59mviJc0hmU_jhcdIVaI51dbEkuiXLk=
   redis:
     host: redis-svc
     port: 6379
     db: 1
-  ray_address: ray-cluster-head-svc
-  workers: 2
+  ray_address: ray-cluster-head-svc.syntho.svc.cluster.local
+  workers: 1
 
 backend:
   replicaCount: 1
   image:
     repository: syntho.azurecr.io/syntho-core-backend
-    tag: latest
+    tag: 0.30.0
   name: backend
   port: 8000
-  workers: 4
-  secret_key: secret-key-change-this-into-something-much-more-safe
+  workers: 1
+  secret_key: ix!57KPgpcyu!&2mMn69pB#R8zLhxLXAexnNoF!XZvqHB9G4JG%QLmFnE8Rx^3bMF#EG7rAxnWK*7LzKWF8S62qbTC
   redis:
     host: redis-svc
     port: 6379
@@ -71,7 +71,7 @@ frontend:
   name: frontend
   image:
     repository: syntho.azurecr.io/syntho-core-frontend
-    tag: latest
+    tag: 1.26.0
   port: 3000
   service:
     port: 3000
@@ -94,26 +94,30 @@ frontend:
         paths:
           - path: /
             pathType: Prefix
-    
+
     tls:
-      - hosts:
-        - syntho.company.com
-        secretName: frontend-tls
+      conf:
+        - hosts:
+          - syntho.company.com
+          secretName: frontend-tls
+      enabled: false
+      selfSignedSSLCertificate: false
 
 db:
   image:
     repository: syntho.azurecr.io/postgres
     tag: latest
+  storageClassName: standard
 
 redis:
   replicaCount: 1
   image:
     repository: redis
     tag: 7.2-rc2
-  storageClassName: default
+  storageClassName: standard
 
-imagePullSecrets: 
-  - name: <synthoImageSecret>
+imagePullSecrets:
+  - name: syntho-cr-secret
 nameOverride: ""
 fullnameOverride: ""
 
